// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package fleet;

option go_package = "api";

service Configuration {
  // ImportChromePlatforms imports chrome platforms.
  rpc ImportChromePlatforms(ImportChromePlatformsRequest) returns (ImportChromePlatformsResponse);
}

message ImportChromePlatformsRequest {
  // Support importing from local file.
  string local_filepath = 1;
}

message ImportChromePlatformsResponse {
}